test/official_tests/assignment/prefix_operator.lox
var a = "a";
!a = "value"; // error: {"line":2,"message":"Invalid assignment target","type":"ParseError"}
